--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -42,8 +42,19 @@
         <ion-label>Go To Login</ion-label>
       </ion-item>
 
-      <ion-item (click)="getGeolocation()">
-        <ion-icon name="walk" slot="start"></ion-icon>
+      <ion-item (click)="sendNotif()" class="ion-activated">
+        <ion-icon name="notifications-outline" slot="start"></ion-icon>
+        <ion-label>Send NOtification</ion-label>
+      </ion-item>
+
+      <ion-item (click)="startCamera()" class="ion-activated">
+        <ion-icon name="videocam-outline" slot="start"></ion-icon>
+        <ion-label>Start Camera</ion-label>
+      </ion-item>
+
+      <!-- <ion-item (click)="getGeolocation()"> -->
+      <ion-item>
+        <ion-icon name="location-outline" slot="start"></ion-icon>
         <ion-label>Geolocation</ion-label>
       </ion-item>
     </ion-card>
